fix(Catalog tiles): decrease the vertical spacing between catalog tiles
affects: patternfly3-react-lerna-root, patternfly-react-extensions

ISSUES CLOSED: #668

--- a/packages/patternfly-3/patternfly-react-extensions/sass/patternfly-react-extensions/_catalog-tile.scss
+++ b/packages/patternfly-3/patternfly-react-extensions/sass/patternfly-react-extensions/_catalog-tile.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   height: $catalog-tile-pf-height;
-  margin: 0 20px $catalog-tile-pf-margin-bottom 0;
+  margin: 0 15px $catalog-tile-pf-margin-bottom 0;
   padding: 15px;
   width: $catalog-tile-pf-width;
 
@@ -41,8 +41,8 @@
     font-size: 16px;
     padding-left: 5px;
 
-    > .fa,
-    > .pficon {
+    >.fa,
+    >.pficon {
       vertical-align: top;
     }
   }
@@ -70,11 +70,11 @@
 }
 
 .catalog-tile-view-pf-category {
-  margin: 10px 0;
+  margin: 10px 0 15px;
 }
 
 .catalog-tile-view-pf-category-header {
-  padding-right: 20px;
+  padding-right: 15px;
 }
 
 .catalog-tile-view-pf-category-header-title {
